# rfid_movedetect

./: CMakeLists.txt  README.md  package.xml
src/: CPhaseModelLinear.cpp  CPhaseModelLinear.h  CPhaseModelNaive.cpp  CPhaseModelNaive.h  CPhaseModelSet.cpp  CPhaseModelSet.h  moveDetect.cpp
tests/: convert.cpp  distance.cpp  ransac.cpp
tests/data/: detect_0.0.txt  detect_0.0_horizontal.txt  detect_0.0_vertical.txt  detect_0.1.txt  detect_0.2.txt  detect_0.3.txt  detect_0.4.txt  detect_0.5.txt  detect_0.6.txt  detect_0.7.txt  detect_0.8.txt  detect_0.9.txt  detect_1.0.txt  detect_1.1.txt  detect_1.2.txt  detect_1.3.txt  detect_1.4.txt
